--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,7 +1,8 @@
 name: Metrics
 on:
-  schedule: [{cron: "0 0 * * *"}] 
+  schedule: [{cron: "0 0 * * *"}]
   workflow_dispatch:
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -9,8 +10,14 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          base: "" 
+          user: In-Kyoto
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: Europe/Kyiv
+          
           plugin_languages: yes
-          plugin_languages_ignored: html, css 
+          plugin_languages_ignored: html, css, scss, text
           plugin_languages_details: bytes-size, percentage
           plugin_languages_limit: 8
+          
+          plugin_lines: yes 
